XStream modules are using to be deleted Java APIs - Java9 version #211
https://github.com/x-stream/xstream/issues/211
Fix Unit test that was inappropriately using a primitive wrapper.

Signed-off-by: Steve Davidson <steve@j2eeguys.com>